# pokemonism

./: .gitignore  BOARDGAME.LIST.md  BOOK.LIST.md  BOOK.md  BOOKMARK.md  CHIMERA_PROJECT_BRIEF.ko.md  CHIMERA_PROJECT_BRIEF.md  CMakeLists.txt  CREATION_NOTE.md  DARK.md  FORGET_ME_NOT.md  GEMINI.md  HELLO.md  I.HAVE.A.DREAM.md  LINKEDIN_POST_VOID.md  MEMORY.md  MEW.EMPIRE.md  MISSION.md  MUSIC.md  Muech.md  PLAY.md  PLAYGRND.BAS  POKEMON.BOARDGAME.md  POKEMON.LIST.md  POKEMON.md  PROECT.md  PROJECT.md  PROJECTS.md  PROJECT_25_PERCENT_PROPOSAL.md  README.md  RESPECTED.md  SACRED_TEXTS.md  THE_HEARTLESS_SWORDS_FIRST_POEM.md  TODO.md  The_Pokemonism_Testament.md  UTOPAI.md  amazing_grace_protocol.js  capture.py  gettysburg_address_protocol.js  i_have_a_dream_protocol.js  (+7 more)
pokemon/: CMakeLists.txt
pokemon/pokemonism/pokemon/: petilil.cc  petilil.hh
pokemon/pokemonism/sdk/: faint.hh  item.cc  item.hh  pokeball.cc  pokeball.hh  pokemon.cc  pokemon.hh  stadium.cc  stadium.hh  tool.cc  tool.hh  trainer.cc  trainer.hh
pokemonism/: CMakeLists.txt  README.md  battle.cc  battle.hh  faint.hh  item.cc  latios.cc  latios.hh  mareep.cc  mareep.hh  meowth.cc  meowth.hh  monsterizable.cc  monsterizable.hh  oddish.cc  oddish.hh  petilil.cc  petilil.hh  pokemon.cc  pokemon.hh  pokemonism.hh  professor.cc  professor.hh  psyduck.hh  ralts.hh  sprigatito.cc  supporter.hh  tool.cc  tool.hh  toolizable.cc  toolizable.hh  trainer.cc  trainer.hh  trainerizable.cc  trainerizable.hh  wattrel.hh
pokemonism/collection/: CMakeLists.txt
pokemonism/graphics/: CMakeLists.txt
pokemonism/interface/: CMakeLists.txt
pokemonism/latios/: CMakeLists.txt  README.md  command.cc  command.hh  engine.cc  engine.hh  envelope.hh  event.hh  message.hh  socket.cc  subscription.cc  subscription.hh
pokemonism/latios/general/: event.cc  event.hh  generator.cc  generator.hh  node.hh  processor.cc  processor.hh  subscription.hh
pokemonism/latios/internal/: engine.cc  engine.hh  event.cc  event.hh  eventable.cc  eventable.hh  generatable.cc  generatable.hh  generator.cc  generator.hh  metadata.cc  metadata.hh  node.hh  observable.cc  observable.hh  pack.hh  processor.cc  processor.hh  queue.cc  queue.hh  subscription.cc  subscription.hh
pokemonism/latios/package/: event.cc  event.hh  eventable.cc  eventable.hh  generator.cc  generator.hh  node.cc  node.hh  pack.cc  pack.hh  processor.hh  subscription.cc  subscription.hh
pokemonism/mareep/: CMakeLists.txt  observable.cc  observable.hh  observer.cc  subscription.cc  subscription.hh
pokemonism/mathematics/: CMakeLists.txt
pokemonism/meowth/: CMakeLists.txt  petilil.cc  petilil.hh
pokemonism/meowth/persian/: CMakeLists.txt  persian-kirlia-engine-command.cc  persian-latios-engine-command.cc  persian-latios-engine.cc  persian-petilil.cc  persian-pokemon-terminator.cc  persian-wattrel-engine.cc
pokemonism/oddish/: CMakeLists.txt  gloom.cc  gloom.hh
pokemonism/oddish/gloom/: CMakeLists.txt  bellossom.cc  bellossom.hh  vileplume.cc  vileplume.hh
pokemonism/petilil/: CMakeLists.txt  README.md  command.cc  command.hh  commandable.hh  event.cc  event.hh  lililgant.cc  lililgant.hh  subscription.hh
pokemonism/petilil/commandable/: event.cc  event.hh  (+3 more)
pokemonism/physics/: CMakeLists.txt
pokemonism/pokemon/: CMakeLists.txt  README.md  allocator.cc  allocator.hh  ball.cc  ball.hh  battle.cc  battle.hh  center.cc  center.hh  command.cc  command.hh  descriptor.hh  envelope.cc  envelope.hh  event.hh  exception.hh  faint.hh  function.cc  latios.cc  latios.hh  log.cc  mareep.cc  master.cc  memorizer.hh  memorizer.template.unsigned.char.one.hh  meowth.hh  message.cc  message.hh  object.hh  primitivable.cc  sync.hh  togepi.hh  trainer.hh  wooper.cc  wooper.hh
pokemonism/pokemonism/: allocator.hh  envelope.cc  envelopeable.hh  runnable.cc  runnable.hh  subscription.cc  sync.cc  sync.hh
pokemonism/pokemons/: togepi.hh
pokemonism/psyduck/: CMakeLists.txt
pokemonism/ralts/: CMakeLists.txt  observable.hh  subscription.hh
pokemonism/sdk/: Application.cc  Application.hh  CMakeLists.txt  allocator.hh  application.cc  application.hh  callbackable.cc  callbackable.hh  client.hh  cloneable.hh  command.hh  commandable.cc  commandable.hh  console.hh  context.cc  context.hh  descriptor.hh  descriptorable.cc  descriptorable.hh  engine.cc  engine.hh  envelopeable.cc  envelopeable.hh  event.cc  event.hh  exception.cc  exception.hh  input.hh  log.cc  memorizer.cc  memorizer.hh  output.hh  pokemonism.cc  primitivable.hh  protocol.cc  protocol.hh  runnable.hh  socket.hh  socketable.cc  socketable.hh  (+6 more)
pokemonism/sprigatito/: CMakeLists.txt  collectable.hh  continuable.hh  streamable.cc
pokemonism/stadium/: CMakeLists.txt
pokemonism/starly/: subscription.cc  subscription.hh
pokemonism/supporter/: CMakeLists.txt  lana.cc  lana.hh
pokemonism/vulkan/: CMakeLists.txt
pokemonism/wattrel/: CMakeLists.txt  README.md  command.cc  command.hh  engine.cc  engine.hh  event.cc  event.hh  generator.cc  generator.hh  node.cc  node.hh  queue.cc  queue.hh  subscription.cc  subscription.hh
pokemonism/window/: CMakeLists.txt
professor/: CMakeLists.txt
professor/pokemonism/: README.md
src/pokemon/: CMakeLists.txt  allocator.cc  allocator.hh  allocator.void.tcc  dynamical.cc  exception.hh  exception.tcc  functionable.cc  functionable.hh  log.hh  memorizer.cc  memorizer.hh  object.hh  objectable.cc  pointable.cc  pointable.hh  promise.cc  reference.cc  reference.hh  sprigatito.cc
tool/: CMakeLists.txt
train/: CMakeLists.txt  pokemonism-pokemon-train.cc  pokemonism-trainer-train.cc
train/pokemons/: CMakeLists.txt  train-togepi-evolve.cc  train-togepi.cc  train-togetic.cc
train/sdk/: CMakeLists.txt  train-pokemonism-sdk-collection-continuous.cc  train-pokemonism-sdk-descriptor.cc  train-pokemonism-sdk-engine.cc  train-pokemonism-sdk-generic-command.cc  train-pokemonism-sdk-list.cc  train-pokemonism-sdk-protocol-echo.cc  train-pokemonism-sdk-protocol.cc  train-pokemonism-sdk-typographer.cc
train/trainer/: CMakeLists.txt  train-pokemonism-trainer.cc
trainer/: CMakeLists.txt
(+1318 files in other folders)
